src/other/mico-2.3.12/test/idl/error/expected-stderr-case7.idl
case7.idl:8: oneway operation 'foo' can not have result, out-parameters or raises-expressions
